src/test/ui/parser/bounds-lifetime-where.stderr
error: expected one of `=`, lifetime, or type, found `,`
  --> $DIR/bounds-lifetime-where.rs:10:14
   |
LL | type A where , = u8; //~ ERROR expected one of `=`, lifetime, or type, found `,`
   |              ^ expected one of `=`, lifetime, or type here

error: aborting due to previous error

